# md2linkedin

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  README.qmd  hooks.py  md2linkedin.code-workspace  mkdocs.yml  prek.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: docs.yml  qa.yml  release.yml  test.yml
R/: app.R  main.R
docs/: advanced.md  index.md  robots.txt
docs/javascripts/: config.js  pyodide_runner.js
docs/reference/: converter.md
docs/stylesheets/: pyodide_runner.css
hextools/: .gitignore  README.md  script.R
overrides/: main.html
scripts/: generate_llmstxt.py
src/md2linkedin/: __init__.py  _cli.py  _converter.py  _unicode.py
tests/: test_cli.py  test_converter.py  test_unicode.py
